groovy 3.x and java 17 support